# server/docs/swagger.json
@@ -67,6 +67,9 @@
             },
             "post": {
                 "description": "Register new call.\n\nRequires a JSON body in the shape of `{\"foo\": \"bar\", \"coffee\": \"beans\"}`.",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -76,6 +79,13 @@
                         "type": "string",
                         "description": "github organisation",
                         "name": "organisation",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "repository name",
+                        "name": "repository",
                         "in": "path",
                         "required": true
                     },
@@ -268,9 +278,6 @@
                 },
                 "repository": {
                     "type": "string"
-                },
-                "timestamp": {
-                    "type": "string"
                 }
             }
         },
@@ -318,9 +325,6 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
